--- a/main.tex
+++ b/main.tex
@@ -38,12 +38,15 @@
 \input{bib.tex}
 \title{Probabilistic Software product lines\thanks{Research partially supported by the Spanish MINECO/FEDER project DArDOS (TIN2015-65845-C3-1-R) and the Comunidad de Madrid project SICOMORo-CM (S2013/ICE-3006).
 }}
-\author{Carlos Camacho \and Luis Llana\and Alberto Núñez\and Manuel Núñez}
+\author{Carlos Camacho\inst{1} \and Luis Llana\inst{1} \and Alberto Núñez\inst{1} \and Mario Bravetti\inst{2}}
 
 \institute{
   Departamento Sistemas Informáticos y Computación\\
   Universidad Complutense de Madrid, Spain\\
-  \email{carlos.camacho@ucm.es, llana@ucm.es, alberto.nunez@pdi.ucm.es, manuelnu@ucm.es\\
+  \and
+  Dipartimento di Informatica - Scienza e Ingegneria, Università di Bologna, Italy /\\
+  FOCUS team, INRIA, France\\
+  \email{carlos.camacho@ucm.es, llana@ucm.es, alberto.nunez@pdi.ucm.es, mario.bravetti@unibo.it\\
    Draft: \timestamp
   }
 }
