--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 We introduce a probabilistic extension of our previous
 work \fodaPA: a formal framework to specify and analyze software product lines.
-We will use probabilistic information to identify those features that are more frequently used by computing the probability of having a feature in a specific software product line.
+We use probabilistic information to identify those features that are more frequently used. This is done by computing the probability of having a feature in a specific software product line.
 We redefine the syntax of \fodaPA\ to include probabilistic operators and define new operational and denotational semantics. We prove that the expected equivalence between these two semantic frameworks holds.
 Our probabilistic framework is supported by a tool. We briefly comment on the characteristics of the tool and discuss the advantages of using probabilities to quantify the likelihood of having features in potential software product lines.
 \end{abstract}
