--- a/denotational.tex
+++ b/denotational.tex
@@ -1,7 +1,7 @@
 \subsection{Denotational Semantics}
 \label{sec:stat:den}
 
-Next we define a denotational semantics for the terms of our language. The main features of the semantic domain are that we consider products (set of features) with probability such that the sum of all the probabilities associated with products belongs to the interval $(0,1]$. First, we
+Next we define a denotational semantics for the terms of our language. The main characteristic of the semantic domain is that we consider products (set of features) with probability such that the sum of all the probabilities associated with products belongs to the interval $(0,1]$. First, we
 precisely define the members of the semantic domain.
 
 %\todo{Explicar el modelo con más detalle,  y el motivo por el que se necesitan multiconjnutos}
