--- a/main.tex
+++ b/main.tex
@@ -72,12 +72,12 @@
 \maketitle
 
 
-\input{abstract.tex}
+\input{abstract}
 
-\input{introduction.tex}
-\input{syntax.tex}
-\input{operational.tex}
-\input{consistency.tex}
+\input{introduction}
+\input{syntax}
+\input{operational}
+\input{consistency}
 \input{denotational}
 \input{equivalence}
 \input{hiding}
@@ -94,6 +94,7 @@
 %\bibliographystyle{abbrv}
 
 \end{document}
+
 
 %%% Local Variables:
 %%% mode: latex
