--- a/testing.tex
+++ b/testing.tex
@@ -23,7 +23,7 @@ generating the BeTTy model are the following:
         \item The probability of having a mandatory feature is 0.2.
         \item The probability of having an optional feature is 0.3.
         \item The probability of having a feature in a \emph{choose-1} relation is 0.25.
-        \item The probability of having a feature in a \emph{paralel} relation is 0.25.
+        \item The probability of having a feature in a \emph{parallel} relation is 0.25.
 \end{itemize}
 
 \begin{figure}[h]
@@ -83,7 +83,7 @@ where \textit{Conf. ID} represents the configuration ID,
  \textit{Mandatory} represents the probability of having a mandatory feature, 
  \textit{Optional} represents the probability of having an optional feature,
  \textit{Choose-1} represents the probability of having a feature in a \textit{choose-1} relation and
- \textit{Parallel} represents the probability of having a feature in a parallel relation.
+ \textit{Parallel} represents the probability of having a feature in a \textit{parallel} relation.
 
 \begin{table}[h]
 \centering
@@ -98,7 +98,7 @@ where \textit{Conf. ID} represents the configuration ID,
 \label{scalaExperiment}
 \end{table}
 
-Figure~\ref{fig:plot:probs:boxplot_0_1} and figure~\ref{fig:plot:probs:boxplot_0_1_mem} show the execution time and the required amount of memory, respectively, for processing the variability models generated using \textit{Config\_1}. In these models, only 1\% of the features have a parallel relation. In general, the processing time when the number of features increases is linear. Only in few cases, where the number of features ranges from 5000 to 8000, the results provide anomalous values. This is mainly caused due to the random nature of the generated models. On the contrary, the memory usage depicts that there are several groups where the memory usage remains constant, one group of models containing between 3,000 and 5,000 features and other group of models containing between 7,000 and 10,000 features. In summary, our implementation shows good scalability results for processing the models generated using \textit{Config\_1} in such a way it requires, in the worst case scenario, 215 ms and 0.32 GB of RAM to process the model.
+Figure~\ref{fig:plot:probs:boxplot_0_1} and figure~\ref{fig:plot:probs:boxplot_0_1_mem} show the execution time and the required amount of memory, respectively, for processing the variability models generated using \textit{Config\_1}. In these models, only 1\% of the features have a parallel relation. In general, the processing time when the number of features increases is linear. Only in few cases, where the number of features ranges from 5000 to 8000, the results provide anomalous values. This is mainly caused by the random nature of the generated models. On the contrary, the memory usage depicts that there are several groups where the memory usage remains constant, one group of models containing between 3,000 and 5,000 features and other group of models containing between 7,000 and 10,000 features. In summary, our implementation shows good scalability results for processing the models generated using \textit{Config\_1}: it requires, in the worst case scenario, 215 ms and 0.32 GB of RAM to process the model.
 
 \begin{figure}[h]
 	\centering
@@ -128,9 +128,9 @@ Figure~\ref{fig:plot:probs:boxplot_0_2} and figure~\ref{fig:plot:probs:boxplot_0
 	\end{minipage}
 \end{figure}
 
-Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0_5_mem} show the results for processing the models generated using \textit{Config\_3}. In this case, the half of the features in the model have a parallel relation. Similarly than the previous experiment, these charts show that both the execution time and the memory usage for processing a model when the number of features increases are exponential. The same turning point located in the previous models generated using \textit{Config\_2}, that is, when the model reaches 6,000 features, is located in the obtained results. The requirements for processing a model, that is, execution time and memory usage, grow much faster for processing these models than the ones required for processing the models using previous configurations. Also, it is important to notice that the models containing 9,000 and 10,000 features cannot be processed due to memory limitations.
+Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0_5_mem} show the results for processing the models generated using \textit{Config\_3}. In this case, half of the features in the model have a parallel relation. Similarly to the previous experiment, these charts show that both the execution time and the memory usage for processing a model when the number of features increases are exponential. In the obtained results we can observe the same turning point detected in the previous models generated using \textit{Config\_2}, that is, when the model reaches 6,000 features. Model processing requirements, that is, execution time and memory usage, grow much faster for these models than for those based on previous configurations. Also, it is important to notice that the models containing 9,000 and 10,000 features cannot be processed due to memory limitations.
 
-Broadly speaking, these results show that increasing the number of features having a parallel relation has a direct impact on the overall performance. In fact, increasing the number of features having a parallel relations generates a combinatorial explosion that hampers the processing of models. First, the execution time to completely process a model significantly grows. Second, large amounts of memory are required to store those combinations. In some cases, using large models with a high percentage of features having a parallel relation may cause a bottleneck in the memory system. In fact, those models generated using \textit{Config\_3} with 9,000 and 10,000 features cannot be processed using 64 GB of RAM.
+Broadly speaking, these results show that increasing the number of features having a parallel relation has a direct impact on the overall performance. In fact, increasing the number of features having a parallel relation generates a combinatorial explosion that hampers the processing of models. First, the execution time to completely process a model significantly grows. Second, large amounts of memory are required to store those combinations. In some cases, using large models with a high percentage of features having a parallel relation may cause a bottleneck in the memory system. In fact, models generated using \textit{Config\_3} with 9,000 and 10,000 features cannot be processed using 64 GB of RAM.
 
 
 \begin{figure}[h]
@@ -153,7 +153,7 @@ Broadly speaking, these results show that increasing the number of features havi
 \subsection{Comparison between results and related work}
 \label{sec:stat:impl:comp}
 
-Now we can compare the last results with the one obtained using \fodaPA~\cite{acl13}
+We now compare the last results with the ones obtained using \fodaPA~\cite{acl13}
 and the cost extension \fodaPAc~\cite{clc16}.
 
 Specifically we want to compare the implementation performance
